# wasmgen

./: .gitignore  Cargo.toml  README.md  extra_wasm.interface  test-release.bat  test.bat  wasm.interface
bindgen1/: Cargo.toml
build_helper/: Cargo.toml
build_helper/src/: lib.rs
shared/src/: lib.rs
test-guest/: Cargo.toml  build.rs
test-guest/src/: guest_gen.rs  lib.rs  memory_buffer.rs  timers.rs
test-guest/src/async/: mod.rs  timer_future.rs
test-host/: Cargo.toml  build.rs
test-host/src/: host_extra.rs  host_gen.rs  host_shared.rs  main.rs  memory_buffer.rs
wasm_codegen/: Cargo.toml
wasm_codegen/src/: guest.rs  guest_import_internal_func.rs  helpers.rs  host.rs  host_import_internal_func.rs  lib.rs  parser.rs  shared.rs  value_type.rs
wasm_codegen_impl/: Cargo.toml
wasm_codegen_impl/src/: guest.rs  helpers.rs  host.rs  lib.rs  parser.rs  shared.rs  value_type.rs
