[workspace]
resolver = "2"

members = [
    "shared",
    "test-guest",
    "test-host",
    "wasm_codegen",
    "wasm_codegen_impl",
]

[workspace.package]
version = "0.0.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
bincode = "1.3.3"
serde = { version = "1", features = ["derive"] }
