[workspace]
resolver = "2"

members = [
    "build_helper",
    "shared",
    "test-guest",
    "test-host",
    "wasm_codegen_impl",
]

[workspace.package]
version = "0.0.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
bincode = "1.3.3"
serde = { version = "1", features = ["derive"] }
quote = "1.0.33"
syn = "2.0.38"
proc-macro2 = "1.0.69"
