[package]
name = "build_helper"
version.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm_codegen.path = '../wasm_codegen'
quote.workspace = true
syn.workspace = true
prettyplease = "0.2.15"
proc-macro2.workspace = true
