[package]
name = "test-guest"
version.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = { workspace = true }
serde = { workspace = true }
shared = { path = "../shared" }
stats_alloc = "0.1.10"
custom-print = "1.0.0"
futures = "0.3.29"

[build-dependencies]
build_helper.path = '../build_helper'

[lib]
crate-type = ["cdylib"]
