[package]
name = "test-host"
version.workspace = true
edition.workspace = true
license.workspace = true
exclude = ["src/host_gen.rs"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmtime = "14.0.4"
wasmtime-wasi = "14.0.4"
bincode = { workspace = true }
shared = { path = "../shared" }
serde = { workspace = true }
anyhow = "1.0.75"

[build-dependencies]
build_helper.path = '../build_helper'
